--- a/Assets/UI Toolkit/GameUI.uxml
+++ b/Assets/UI Toolkit/GameUI.uxml
@@ -1,13 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement style="flex-direction: row;">
-        <ui:GroupBox name="ConnectButtons">
-            <ui:Button text="Disconnect" display-tooltip-when-elided="true" name="BtnDisconnect" />
-        </ui:GroupBox>
-        <ui:VisualElement name="StatusWindow" style="width: 111px; margin-left: 8px; margin-right: 8px; margin-top: 8px; margin-bottom: 8px;">
-            <ui:VisualElement style="flex-direction: row; justify-content: space-between;">
-                <ui:Label text="Status:" display-tooltip-when-elided="true" />
-                <ui:Label text="??" display-tooltip-when-elided="true" name="LblRole" enable-rich-text="true" />
-            </ui:VisualElement>
+    <ui:VisualElement name="TopBar" style="flex-direction: row-reverse; margin-top: 5px;">
+        <ui:VisualElement name="Units" style="flex-direction: row;">
+            <ui:Label text="Units" display-tooltip-when-elided="true" />
+            <ui:Label text="0" display-tooltip-when-elided="true" name="UnitCount" style="width: 30px; margin-left: 10px;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
